@@ -22,7 +22,8 @@ cd Appimage
 #tar -xzf MediathekView*tar.gz
 cp ../target/media/MediathekView*.tar.gz ./
 tar -xzf MediathekView*.tar.gz
-VERSION=$(ls |grep MediathekView_|grep "tar" | cut -d "_" -f 3-5|cut -d'-' -f1|cut -d'.' -f1|sed 's/_/./g')
+# Beispiel Datiename MediathekView-13.6.0-SNAPSHOT-linux.tar.gz
+VERSION=$(ls |grep MediathekView-|grep "tar" | cut -d "-" -f 2)
 
 rm ./MediathekView*.tar.gz
 
@@ -78,7 +79,7 @@ cat > usr/bin/$LOWERAPP <<'EOF'
 
 dir=$(dirname $(readlink -f "$0"))
 cd "$dir"
-MediathekView -Xmx1G -jar MediathekView.jar "$@"
+MediathekView -Xmx2G --enable-preview -jar MediathekView.jar "$@"
 cd $OLDPWD
 EOF
 
@@ -108,6 +109,3 @@ rm -Rf Appimage
 cp out/MediathekView*.AppImage target/
 
 rm -Rf out
-
-
-
